# advent-of-code

./: Cargo.toml  readme
day01/: Cargo.toml
day_01/: Cargo.toml
day_01/src/: main.rs
day_02/: Cargo.toml
day_02/src/: lib.rs  main.rs
day_03/: Cargo.toml
day_03/src/: main.rs
day_04/src/: main.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  lib.rs
