[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["Philip Craig <689193+philipcraig@users.noreply.github.com>"]
edition = "2018"

[dependencies]
aoc-runner="0.3.0"
aoc-runner-derive="0.3.0"
regex = "1"
lazy_static = "1.4.0"

[profile.release]
lto = "fat"
codegen-units = 1
debug = true